--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -110,7 +110,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../releases/html/index.html"
+export_path=".release/web/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -129,7 +129,7 @@ html/head_include=""
 html/canvas_resize_policy=1
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
+progressive_web_app/enabled=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=0
 progressive_web_app/orientation=0
